--- a/gradle.properties
+++ b/gradle.properties
@@ -1,45 +1,32 @@
-# Sets default memory used for gradle commands. Can be overridden by user or command line properties.
-org.gradle.jvmargs=-Xmx1G
+# Gradle settings
+org.gradle.jvmargs=-Xmx2G
 org.gradle.daemon=true
 org.gradle.parallel=true
 org.gradle.caching=true
 org.gradle.configuration-cache=true
 
-#read more on this at https://github.com/neoforged/ModDevGradle?tab=readme-ov-file#better-minecraft-parameter-names--javadoc-parchment
-# you can also find the latest versions at: https://parchmentmc.org/docs/getting-started
+# Mappings
 parchment_minecraft_version=1.20.1
 parchment_mappings_version=2023.09.03
+
 # Environment Properties
-# You can find the latest versions here: https://files.minecraftforge.net/net/minecraftforge/forge/index_1.20.1.html
-# The Minecraft version must agree with the Forge version to get a valid artifact
 minecraft_version=1.20.1
-# The Minecraft version range can use any release version of Minecraft as bounds.
-# Snapshots, pre-releases, and release candidates are not guaranteed to sort properly
-# as they do not follow standard versioning conventions.
 minecraft_version_range=[1.20.1, 1.21)
-# The Forge version must agree with the Minecraft version to get a valid artifact
-forge_version=47.1.3
-# The Forge version range can use any version of Forge as bounds
-forge_version_range=[47.1.3,)
-# The loader version range can only use the major version of FML as bounds
+# 安定版の47.2.0に少し上げましたが、47.1.3でも動作します
+forge_version=47.2.0
+forge_version_range=[47.2.0,)
 loader_version_range=[47,)
 
 ## Mod Properties
+mod_id=alephs_compress
+mod_name=Compress!
+mod_license=MIT
+mod_version=0.1.0
+mod_group_id=com.aleph0milk.compress
+mod_authors=Aleph0Milk
+mod_description=すべてのアイテムを無限に圧縮可能にするMod。\nレベル1以上のブロックは設置不可。
 
-# The unique mod identifier for the mod. Must be lowercase in English locale. Must fit the regex [a-z][a-z0-9_]{1,63}
-# Must match the String constant located in the main mod class annotated with @Mod.
-mod_id=examplemod
-# The human-readable display name for the mod.
-mod_name=Example Mod
-# The license of the mod. Review your options at https://choosealicense.com/. All Rights Reserved is the default.
-mod_license=All Rights Reserved
-# The mod version. See https://semver.org/
-mod_version=1.0.0
-# The group ID for the mod. It is only important when publishing as an artifact to a Maven repository.
-# This should match the base package used for the mod sources.
-# See https://maven.apache.org/guides/mini/guide-naming-conventions.html
-mod_group_id=com.example.examplemod
-# The authors of the mod. This is a simple text string that is used for display purposes in the mod list.
-mod_authors=YourNameHere, OtherNameHere
-# The description of the mod. This is a simple multiline text string that is used for display purposes in the mod list.
-mod_description=Example mod description.\nNewline characters can be used and will be replaced properly.
+# Dependencies Versions
+# Polymorph (Forge 1.20.1用)
+polymorph_project_id=389396
+polymorph_file_id=4616232
