--- a/gradle.properties
+++ b/gradle.properties
@@ -5,19 +5,20 @@ org.gradle.parallel=true
 org.gradle.caching=true
 org.gradle.configuration-cache=true
 
-# Mappings
+# Mappings (Parchmentを使用)
 parchment_minecraft_version=1.20.1
 parchment_mappings_version=2023.09.03
 
 # Environment Properties
 minecraft_version=1.20.1
 minecraft_version_range=[1.20.1, 1.21)
-# 安定版の47.2.0に少し上げましたが、47.1.3でも動作します
-forge_version=47.2.0
-forge_version_range=[47.2.0,)
+# LegacyForge環境で安定するバージョンを指定
+forge_version=47.1.3
+forge_version_range=[47.1.3,)
 loader_version_range=[47,)
 
 ## Mod Properties
+# 提供いただいた情報に基づき設定
 mod_id=alephs_compress
 mod_name=Compress!
 mod_license=MIT
@@ -26,7 +27,5 @@ mod_group_id=com.aleph0milk.compress
 mod_authors=Aleph0Milk
 mod_description=すべてのアイテムを無限に圧縮可能にするMod。\nレベル1以上のブロックは設置不可。
 
-# Dependencies Versions
-# Polymorph (Forge 1.20.1用)
-polymorph_project_id=389396
-polymorph_file_id=4616232
+# Dependency Versions (build.gradleで使用)
+polymorph_version=0.49.5
