--- a/src/main/templates/META-INF/mods.toml
+++ b/src/main/templates/META-INF/mods.toml
@@ -1,29 +1,34 @@
 modLoader="javafml"
-loaderVersion="${loader_version_range}"
-license="${mod_license}"
+loaderVersion="[47,)" # 1.20.1 Forgeの一般的な範囲
+license="MIT" # あるいはご自身で決めたライセンス
 
 [[mods]]
-    modId="${mod_id}"
-    version="${mod_version}"
-    displayName="${mod_name}"
-    authors="${mod_authors}"
-    description='''${mod_description}'''
+    modId="alephs_compress"
+    version="1.0.0"
+    displayName="Aleph's Compress"
+    authors="Aleph"
+    description='''
+すべてのアイテムを9個で1つに圧縮できるModです。
+圧縮されたアイテムは設置できず、無限の密度を持ちます。
+21億回の圧縮を超えた時、何かが起こるかもしれません。
+'''
+# アイコン画像がない場合は logoFile の行は消しておいてOKです
 
-[[dependencies.${mod_id}]]
+[[dependencies.alephs_compress]]
     modId="forge"
     mandatory=true
-    versionRange="${forge_version_range}"
+    versionRange="[47,)"
     ordering="NONE"
     side="BOTH"
 
-[[dependencies.${mod_id}]]
+[[dependencies.alephs_compress]]
     modId="minecraft"
     mandatory=true
-    versionRange="${minecraft_version_range}"
+    versionRange="[1.20.1,1.21)"
     ordering="NONE"
     side="BOTH"
 
-[[dependencies.${mod_id}]]
+[[dependencies.alephs_compress]]
     modId="polymorph"
     mandatory=true
     versionRange="[0.46,)"
