--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,10 +12,10 @@ jobs:
           fetch-depth: 0
           fetch-tags: true
 
-      - name: Setup JDK 21
+      - name: Setup JDK 17  # 1.20.1 Forgeに合わせて17に変更
         uses: actions/setup-java@v4
         with:
-          java-version: '21'
+          java-version: '17'
           distribution: 'temurin'
 
       - name: Setup Gradle
@@ -23,3 +23,10 @@ jobs:
 
       - name: Build with Gradle
         run: ./gradlew build
+        
+      # 【追加】ビルドされたJARをGitHubの画面からダウンロードできるようにする設定
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: Alephs-Compress-Jar
+          path: build/libs/*.jar
